# semi-autocad

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  partcad.yaml  pyproject.toml  pytest.ini  readme.md
.claude/: settings.template.json
.reports/: cad-task-flows-20260131.md  code-security-audit-20260201.md  component-library-research-20260131.md  mcp-research-20260131.md  mvp-decision-cadquery-20260131.md  project-audit-20260131.md  project-retrospective-20260131.md  roadmap-20260131.md  type-system-architecture-proposal.md
docs/: cq-editor-multifile.md  electronics.md
output/: quad_frame_220mm.step  quad_frame_220mm.stl  quad_frame_assembly.step  quad_frame_assembly.stl  test_export.step  test_export.stl
output/components/: battery_4s_1300.step  battery_4s_1300.stl  esc_45a_30x30.step  esc_45a_30x30.stl  fc_f405_30x30.step  fc_f405_30x30.stl  motor_2207.step  motor_2207.stl  prop_5inch.step  prop_5inch.stl
projects/enclosure-test/: __init__.py  assembly.py  build.py  config.py  frame.py  partcad.yaml
projects/quadcopter-5inch/: __init__.py  assembly.py  build.py  config.py  frame.py  partcad.yaml
scripts/: __init__.py  components.py  export_views.py  quadcopter_assembly.py  quadcopter_frame.py  view_assembly.py
semicad/: __init__.py  __main__.py  py.typed
semicad/cli/: __init__.py
semicad/cli/commands/: build.py  completion.py  library.py  partcad_cmd.py  project.py  view.py
semicad/core/: __init__.py  component.py  exceptions.py  project.py  protocols.py  registry.py  validation.py
semicad/export/: __init__.py  bom.py  render.py  step.py  stl.py
semicad/sources/: __init__.py  custom.py  electronics.py  partcad_source.py  warehouse.py
semicad/templates/: __init__.py  basic.py  enclosure.py  quadcopter.py
tests/: __init__.py  conftest.py  test_cli_electronics.py  test_cli_partcad.py  test_electronics.py
tests/core/: __init__.py  test_component.py  test_exceptions.py  test_project.py  test_registry.py
tests/integration/: __init__.py  test_electronics_integration.py  test_electronics_regression.py
tests/sources/: __init__.py  test_electronics.py  test_electronics_edge_cases.py  test_partcad.py
